<resources>
    <string name="app_name">Ciudadano Informa</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario Incorrecto</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión incorrecto"</string>
    <string name="btnTodos">Todas las categorías</string>
    <string name="insertar">Insertar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="t_tulo_de_la_incidencia">Título de la incidencia</string>
    <string name="formulario_de_aviso_para_incidencias">NOTIFICACIÓN DE INCIDENCIAS</string>
    <string name="equipo_de_encargados">Equipo de encargados</string>
    <string name="fotograf_a_de_la_incidencia">Examinar fotografía</string>
    <string name="categor_a_de_la_incidencia">Categoría de la incidencia</string>
    <string name="estado">Estado</string>
    <string name="descripci_n_incidencia">Descripción incidencia</string>
    <string name="registro">Registrar usuario</string>
    <string name="nombre_completo">Nombre y apellidos</string>
    <string name="repetir_contraseña">Vuelve a escribir tu contraseña</string>
    <string name="escribe_comentario">Escribe tu comentario...</string>
    <string name="ID_Incidencia">ID incidencia:</string>
    <string name="comentarios2">COMENTARIOS</string>
    <string name="ninguna_incidencia">NO EXISTEN INCIDENCIAS EN ESTA CATEGORIA, UNA CIUDAD SIN INCIDENCIAS ES UNA CIUDAD FELIZ</string>
    <string name="registrarseBTN">Registrar usuario</string>
    <string name="id">ID:</string>


</resources>