<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.main.ActivityInsert">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />


    <TextView
        android:id="@+id/textHeader"
        android:layout_width="311dp"
        android:layout_height="101dp"
        android:fontFamily="@font/bebas"
        android:text="@string/formulario_de_aviso_para_incidencias"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toTopOf="@+id/g4" />

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/textTitul" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/azulCielo"
        android:fontFamily="@font/bebas"
        android:text="@string/insertar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/g3"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/g1" />

    <TextView
        android:id="@+id/textUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ubicaci_n"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/editTitulo" />

    <ImageView
        android:id="@+id/ImagenPrueba"
        android:layout_width="143dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/btnFoto"
        app:layout_constraintTop_toBottomOf="@+id/editComentario"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="118dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/azulCielo"
        android:fontFamily="@font/bebas"
        android:text="@string/fotograf_a_de_la_incidencia"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInsertar"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/editComentario"
        app:layout_constraintVertical_bias="0.941" />

    <Spinner
        android:id="@+id/editCategoria"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Spinner
        android:id="@+id/editEquipo"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/g2" />

    <TextView
        android:id="@+id/textCateg"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/categor_a_de_la_incidencia"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editCategoria"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/textEquipo"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/equipo_de_encargados"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/editEquipo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g1" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="4dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textComent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="4dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:background="@color/cardview_shadow_start_color"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUbic" />

    <TextView
        android:id="@+id/textTitul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/t_tulo_de_la_incidencia"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/azulCielo"
        android:fontFamily="@font/bebas"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/g3"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInsertar" />

    <EditText
        android:id="@+id/editComentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="80"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/g3"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g1" />

    <TextView
        android:id="@+id/textComent"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/descripci_n_incidencia"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editComentario"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/g1" />

    <EditText
        android:id="@+id/editUbic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/g2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g1"
        app:layout_constraintTop_toBottomOf="@+id/textUbicacion" />

</androidx.constraintlayout.widget.ConstraintLayout>